Service structure and testing ui

--- a/src/Knet.Phone.ArcGIS/UrlResources.resx
+++ b/src/Knet.Phone.ArcGIS/UrlResources.resx
@@ -126,7 +126,7 @@
     <comment>Default url to ArcGIS Online REST API endpoint.</comment>
   </data>
   <data name="ArcGISPortalGenerateTokenUrl" xml:space="preserve">
-    <value>http://www.arcgis.com/sharing/rest/generateToken</value>
+    <value>https://www.arcgis.com/sharing/rest/generateToken</value>
     <comment>Url to generateToken REST endpoint.</comment>
   </data>
 </root>
